# APKFileShowcaser

./: README.md  index.html  package-lock.json  package.json
Documentation/: BuildingTheProject.md  SettingUpTheProject.md
Documentation/Pictures/: APKFileShowcaser_Quality90_Effort10.avif
src/: App.svelte  main.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
